--- a/css/sass/partials-v2/_base.sass
+++ b/css/sass/partials-v2/_base.sass
@@ -18,7 +18,7 @@ main
 
 article, header, footer
 	max-width: $b_small
-	min-width: 400px
+	min-width: $l_min_width
 	margin-left: 3%
 	margin-right: 3%
 
